--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,87 @@
+a.cover {
+    text-decoration: underline;
+}
+
+        html {
+    background-color: #00c6ff;
+}
+
+        p{
+           color: darkcyan;
+    }
+
+body {
+    width: 600px;
+    margin: 0 auto;
+    background-color: black;
+    padding: 0px 20px 20px;
+    border: 5px solid rgb(23, 14, 14);
+    background: linear-gradient(to right, #b70f82, #00c6ff);
+}
+
+.container {
+    text-align: center;
+    padding: 20px;
+}
+
+h1 {
+    color: #031f1c;
+    font-size: 36px;
+}
+
+h2 {
+    color:#1a1106
+}
+.image-container {
+    margin: 20px 0;
+}
+
+.image-container img {
+    width: 200px;
+    height: auto;
+    border-radius: 50%;
+}
+
 p {
-    color: red;
-  }
+    color: #031f1c;
+}
+.info {
+    background-color: #ffd1dc;
+    padding: 20px;
+    border-radius: 10px;
+    display: inline-block;
+    text-align: left;
+}
+
+.info h2 {
+    color: #4bedd7;
+    font-size: 28px;
+}
+
+.info p {
+    color: #a72e2e;
+    font-size: 18px;
+    margin: 5px 0;
+}
+
+.info a {
+    color: #0000ff;
+    text-decoration: none;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: white;
+    color: black;
+    transition: background-color 0.5s, color 0.5s;
+}
+
+body.dark {
+    background-color: black;
+    color: white;
+}
+
+.container {
+    text-align: center;
+    margin-top: 50px;
+}
